--- a/index.html
+++ b/index.html
@@ -1,101 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Knowledge-Vault</title>
-    <link rel="stylesheet" href="./styles.css" />
-    <!-- google fonts cdn -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body class=".inter-font">
-    <header>
-      <nav class="container">
-        <div class="logo">
-          <img src="./assets/logo-navbar.png" alt="" />
-        </div>
-        <ul class="menu">
-          <li><a href="">Features</a></li>
-          <li><a href="">How It Works</a></li>
-          <li><a href="">Why It's Different</a></li>
-        </ul>
-        <button class="btn">Get Early Access</button>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Knowledge-Vault</title>
+  <link rel="stylesheet" href="./styles.css" />
+  <!-- google fonts cdn -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+</head>
 
-      <section id="banner">
-        <div class="banner-container container">
-          <h2 class="banner-heading">
-            <span id="part1">Structured thinking,</span> <br />
-            <span id="part2">not just note-taking.</span>
-          </h2>
-          <p class="description-text">
-            A private space to store notes, links, and learning summaries —
-            designed to <br />
-            help you think clearly, connect ideas, and turn learning into
-            long-term knowledge.
-          </p>
-          <div>
-            <button class="btn btn-custom1">
-              Start Building Your Vault
-              <img class="btn-sign" src="./assets/ArrowRight.png" alt="" />
-            </button>
-            <button class="btn-custom2 btn">
-              <img src="./assets/Play.png" alt="" /> class See How It Works
-            </button>
-          </div>
-        </div>
-      </section>
-    </header>
+<body class=".inter-font">
+  <header>
+    <nav class="container">
+      <div class="logo">
+        <img src="./assets/logo-navbar.png" alt="" />
+      </div>
+      <ul class="menu">
+        <li><a href="">Features</a></li>
+        <li><a href="">How It Works</a></li>
+        <li><a href="">Why It's Different</a></li>
+      </ul>
+      <button class="btn">Get Early Access</button>
+    </nav>
 
-    <section id="problem">
-      <div class="problem-container container">
-        <div class="section-heading ">
-          <h2>Notes don't fail, Structure does.</h2>
-          <p>
-            You're not bad at learning. Your tools just weren't built for how
-            knowledge actually works.
-          </p>
-        </div>
-
-        <div class="problem-info section-heading">
-          <div class="info-card">
-            <div class="icon-wrapper">
-              <img src="./assets/Vector.png" alt="" />
-            </div>
-            <h3>Scattered notes</h3>
-            <p>Your ideas live in 10 different apps, none of them connected.</p>
-          </div>
-          <div class="info-card">
-            <div class="icon-wrapper">
-              <img src="./assets/Bookmarks.png" alt="" />
-            </div>
-            <h3>Bookmark overload</h3>
-            <p>Hundreds of saved links you'll never revisit or remember.</p>
-          </div>
-          <div class="info-card ">
-            <div class="icon-wrapper">
-              <img src="./assets/Vector.png" alt="" />
-            </div>
-            <h3>No idea connections</h3>
-            <p>
-              Insights stay isolated, never building into bigger understanding.
-            </p>
-          </div>
-          <div class="info-card">
-            <div class="icon-wrapper">
-              <img src="./assets/Info.png" alt="" />
-            </div>
-            <h3>Forgetting whatyou learned</h3>
-            <p>Knowledge fades because there's no system to retain it.</p>
-          </div>
+    <section id="banner">
+      <div class="banner-container container">
+        <h2 class="banner-heading">
+          <span id="part1">Structured thinking,</span> <br />
+          <span id="part2">not just note-taking.</span>
+        </h2>
+        <p class="description-text">
+          A private space to store notes, links, and learning summaries —
+          designed to <br />
+          help you think clearly, connect ideas, and turn learning into
+          long-term knowledge.
+        </p>
+        <div>
+          <button class="btn btn-custom1">
+            Start Building Your Vault
+            <img class="btn-sign" src="./assets/ArrowRight.png" alt="" />
+          </button>
+          <button class="btn-custom2 btn">
+            <img src="./assets/Play.png" alt="" /> class See How It Works
+          </button>
         </div>
       </div>
     </section>
-  </body>
+  </header>
+
+  <section id="problem">
+    <div class="problem-container container">
+      <div class="section-heading ">
+        <h2>Notes don't fail, Structure does.</h2>
+        <p>
+          You're not bad at learning. Your tools just weren't built for how
+          knowledge actually works.
+        </p>
+      </div>
+
+      <div class="problem-info section-heading">
+        <div class="info-card">
+          <div class="icon-wrapper">
+            <img src="./assets/Vector.png" alt="" />
+          </div>
+          <h3>Scattered notes</h3>
+          <p>Your ideas live in 10 different apps, none of them connected.</p>
+        </div>
+        <div class="info-card">
+          <div class="icon-wrapper">
+            <img src="./assets/Bookmarks.png" alt="" />
+          </div>
+          <h3>Bookmark overload</h3>
+          <p>Hundreds of saved links you'll never revisit or remember.</p>
+        </div>
+        <div class="info-card ">
+          <div class="icon-wrapper">
+            <img src="./assets/Vector.png" alt="" />
+          </div>
+          <h3>No idea connections</h3>
+          <p>
+            Insights stay isolated, never building into bigger understanding.
+          </p>
+        </div>
+        <div class="info-card">
+          <div class="icon-wrapper">
+            <img src="./assets/Info.png" alt="" />
+          </div>
+          <h3>Forgetting whatyou learned</h3>
+          <p>Knowledge fades because there's no system to retain it.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="solution">
+    <div class="solution-container container">
+      <div class="solution-img">
+        <img src="./assets/knowledge.png" alt="">
+      </div>
+      <div class="solution-description">
+        <h4>The Solution</h4>
+        <div class="section-heading">
+          <h2>Your second brain, <br />
+            structured by design.</h2>
+          <p>Personal Knowledge Vault isn't another note-taking app.
+            It's a thinking environment where every note, link, and summary
+            becomes part of an interconnected web of understanding.
+          </p>
+
+        </div>
+
+        <ul class="points">
+          <li>
+            <img src="./assets/CheckCircle.png" alt="">
+            Capture ideas with structure built-in from day one
+          </li>
+          <li>
+            <img src="./assets/CheckCircle.png" alt="">
+            Connect related concepts automatically as you write
+          </li>
+          <li>
+            <img src="./assets/CheckCircle.png" alt="">
+            Build lasting knowledge through reflection prompts
+          </li>
+          <li>
+            <img src="./assets/CheckCircle.png" alt="">
+            Find anything instantly with semantic search
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section id="access">
+    <div class="access-container container">
+      <div class="section-heading">
+        <h2>
+          Ready to think more clearly?
+        </h2>
+        <p>
+          Join thousands of learners who are building their personal knowledge vaults. Start free, no credit card required.
+        </p>
+      </div>
+      <div>
+        <button class="btn">Get Early Access <img class="btn-sign" src="./assets/ArrowRight.png" alt=""></button>
+      </div>
+      <div class="section-heading">
+        <p>
+          Free during early access • No credit card needed
+        </p>
+      </div>
+    </div>
+  </section>
+</body>
+
 </html>
