--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
+
+    <!-- fontawesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class=".inter-font">
@@ -108,8 +113,8 @@
         <div class="section-heading">
           <h2>Your second brain, <br />
             structured by design.</h2>
-          <p>Personal Knowledge Vault isn't another note-taking app.
-            It's a thinking environment where every note, link, and summary
+          <p>Personal Knowledge Vault isn't another note-taking app. <br />
+            It's a thinking environment where every note, link, and summary <br />
             becomes part of an interconnected web of understanding.
           </p>
 
@@ -157,6 +162,39 @@
       </div>
     </div>
   </section>
+
+  <footer id="footer">
+    <section >
+      <div class="footer-container container">
+        <div class="logo-social">
+          <div class="logo">
+            <img src="./assets/logo-footer.png" alt="">
+          </div>
+          
+          <div class="social-part">
+            <p class="social-title">Social Links</p>
+            <div class="social-icon">
+              <div class="icon">
+                <i class="fa-brands fa-x-twitter"></i>
+              </div>
+              <div class="icon">
+                <i class="fa-brands fa-instagram"></i>
+              </div>
+              <div class="icon">
+                <i class="fa-brands fa-facebook-f"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="copyright">
+          <p>
+            © 2026 Personal Knowledge Vault. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </section>
+  </footer>
 </body>
 
 </html>
