final reviewing is done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class=".inter-font">
-  <header>
+  <header id="header">
     <nav class="container">
       <div class="logo">
         <img src="./assets/logo-navbar.png" alt="" />
@@ -39,12 +39,14 @@
           <span id="part1">Structured thinking,</span> <br />
           <span id="part2">not just note-taking.</span>
         </h2>
-        <p class="description-text">
-          A private space to store notes, links, and learning summaries —
-          designed to <br />
-          help you think clearly, connect ideas, and turn learning into
-          long-term knowledge.
-        </p>
+        <div class="description-text">
+          <p >
+            A private space to store notes, links, and learning summaries —
+            designed to <br />
+            help you think clearly, connect ideas, and turn learning into
+            long-term knowledge.
+          </p>
+        </div>
         <div>
           <button class="btn btn-custom1">
             Start Building Your Vault
