clean some unnecessary code and lightly modified

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <img class="btn-sign" src="./assets/ArrowRight.png" alt="" />
           </button>
           <button class="btn-custom2 btn">
-            <img src="./assets/Play.png" alt="" /> class See How It Works
+            <img src="./assets/Play.png" alt="" /> Class See How It Works
           </button>
         </div>
       </div>
