fix the social-icons

--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
             <p class="social-title">Social Links</p>
             <div class="social-icon">
               <div class="icon">
-                <i class="fa-brands fa-x-twitter"></i>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
               </div>
               <div class="icon">
-                <i class="fa-brands fa-instagram"></i>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
               </div>
               <div class="icon">
-                <i class="fa-brands fa-facebook-f"></i>
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
               </div>
             </div>
           </div>
